--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -83,7 +83,7 @@
             -->
             <div class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1" id="profile-dropdown">
               <!-- Active: "bg-gray-100", Not Active: "" -->
-              <%= link_to "#", class: "no-underline " do %>
+              <%= link_to user_profile_path(current_user), class: "no-underline " do %>
                 <button class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-700 hover:text-white w-full rounded-md" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</button>
               <% end %>
 
