--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,7 +46,11 @@
         </div>
         <div class="flex flex-col items-center -mt-20">
             <%# User name %>
-            <%= cl_image_tag @user.profile_photo.key, class: "w-60 h-60 object-cover border-4 border-white rounded-full" %>
+            <% if @user.profile_photo.key.present? %>
+              <%= cl_image_tag @user.profile_photo.key, class: "w-60 h-60 object-cover border-4 border-white rounded-full" %>
+            <% else %>
+              <%= image_tag asset_path('user_icon'), class: "w-60 h-60 rounded-full border-4 border-white bg-gray-50" %>
+            <% end %>
             <%# <img src="https://vojislavd.com/ta-template-demo/assets/img/profile.jpg" class="w-40 border-4 border-white rounded-full"> %>
             <div class="flex items-center space-x-2 mt-2">
                 <p class="text-2xl"><%= @user.full_name %></p>
@@ -83,11 +87,10 @@
             </div>
         </div>
     </div>
-    <% console %>
 
     <div class="my-4 flex flex-col 2xl:flex-row space-y-4 2xl:space-y-0 2xl:space-x-4">
         <div class="w-full flex flex-col 2xl:w-1/3">
-            <div class="flex-1 bg-white rounded-lg shadow-xl p-8">
+            <div class="inline bg-white rounded-lg shadow-xl p-8">
                 <h4 class="text-xl text-gray-900 font-bold">Personal Info</h4>
                 <ul class="mt-2 text-gray-700">
                     <% attributes_array = ["full_name", "phone_number", "address", "city", "country", "created_at", "updated_at"] %>
@@ -122,7 +125,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="flex-1 bg-white rounded-lg shadow-xl mt-4 p-8">
+            <div class="flex-1 overflow-scroll bg-white rounded-lg shadow-xl mt-4 p-8">
                 <h4 class="text-xl text-gray-900 font-bold">Activity log</h4>
                 <div class="relative px-4">
                     <div class="absolute h-full border border-dashed border-opacity-20 border-secondary"></div>
@@ -207,72 +210,17 @@
         <div class="flex flex-col w-full 2xl:w-2/3">
             <div class="flex-1 bg-white rounded-lg shadow-xl p-8">
                 <h4 class="text-xl text-gray-900 font-bold">About</h4>
-                <p class="mt-2 text-gray-700">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt voluptates obcaecati numquam error et ut fugiat asperiores. Sunt nulla ad incidunt laboriosam, laudantium est unde natus cum numquam, neque facere. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, magni odio magnam commodi sunt ipsum eum! Voluptas eveniet aperiam at maxime, iste id dicta autem odio laudantium eligendi commodi distinctio!</p>
+                <p class="mt-2 text-gray-700"><%= @user.about %></p>
             </div>
             <div class="flex-1 bg-white rounded-lg shadow-xl mt-4 p-8">
-                <h4 class="text-xl text-gray-900 font-bold">Statistics</h4>
+                <h4 class="text-xl text-gray-900 font-bold">Offers (<%= @offers.count %>)</h4>
 
                 <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 mt-4">
-                    <div class="px-6 py-6 bg-gray-100 border border-gray-300 rounded-lg shadow-xl">
-                        <div class="flex items-center justify-between">
-                            <span class="font-bold text-sm text-indigo-600">Total Revenue</span>
-                            <span class="text-xs bg-gray-200 hover:bg-gray-500 text-gray-500 hover:text-gray-200 px-2 py-1 rounded-lg transition duration-200 cursor-default">7 days</span>
-                        </div>
-                        <div class="flex items-center justify-between mt-6">
-                            <div>
-                                <svg class="w-12 h-12 p-2.5 bg-indigo-400 bg-opacity-20 rounded-full text-indigo-600 border border-indigo-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-                            </div>
-                            <div class="flex flex-col">
-                                <div class="flex items-end">
-                                    <span class="text-2xl 2xl:text-3xl font-bold">$8,141</span>
-                                    <div class="flex items-center ml-2 mb-1">
-                                        <svg class="w-5 h-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path></svg>
-                                        <span class="font-bold text-sm text-gray-500 ml-0.5">3%</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                  <% @offers.each do |offer| %>
+                    <div class="p-6 w-full xl:hover:shadow-xl xl:hover:shadow-blue-100 rounded-xl transition duration-600 flex flex-col content-center">
+                      <%= offerable_link(offer) %>
                     </div>
-                    <div class="px-6 py-6 bg-gray-100 border border-gray-300 rounded-lg shadow-xl">
-                        <div class="flex items-center justify-between">
-                            <span class="font-bold text-sm text-green-600">New Orders</span>
-                            <span class="text-xs bg-gray-200 hover:bg-gray-500 text-gray-500 hover:text-gray-200 px-2 py-1 rounded-lg transition duration-200 cursor-default">7 days</span>
-                        </div>
-                        <div class="flex items-center justify-between mt-6">
-                            <div>
-                                <svg class="w-12 h-12 p-2.5 bg-green-400 bg-opacity-20 rounded-full text-green-600 border border-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z"></path></svg>
-                            </div>
-                            <div class="flex flex-col">
-                                <div class="flex items-end">
-                                    <span class="text-2xl 2xl:text-3xl font-bold">217</span>
-                                    <div class="flex items-center ml-2 mb-1">
-                                        <svg class="w-5 h-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path></svg>
-                                        <span class="font-bold text-sm text-gray-500 ml-0.5">5%</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="px-6 py-6 bg-gray-100 border border-gray-300 rounded-lg shadow-xl">
-                        <div class="flex items-center justify-between">
-                            <span class="font-bold text-sm text-blue-600">New Connections</span>
-                            <span class="text-xs bg-gray-200 hover:bg-gray-500 text-gray-500 hover:text-gray-200 px-2 py-1 rounded-lg transition duration-200 cursor-default">7 days</span>
-                        </div>
-                        <div class="flex items-center justify-between mt-6">
-                            <div>
-                                <svg class="w-12 h-12 p-2.5 bg-blue-400 bg-opacity-20 rounded-full text-blue-600 border border-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path></svg>
-                            </div>
-                            <div class="flex flex-col">
-                                <div class="flex items-end">
-                                    <span class="text-2xl 2xl:text-3xl font-bold">54</span>
-                                    <div class="flex items-center ml-2 mb-1">
-                                        <svg class="w-5 h-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path></svg>
-                                        <span class="font-bold text-sm text-gray-500 ml-0.5">7%</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                  <% end %>
                 </div>
 
                 <div class="mt-4">
@@ -281,107 +229,7 @@
             </div>
         </div>
     </div>
-    <div class="bg-white rounded-lg shadow-xl p-8">
-        <div class="flex items-center justify-between">
-            <h4 class="text-xl text-gray-900 font-bold">Connections (532)</h4>
-            <a href="#" title="View All">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-500 hover:text-gray-700" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z"></path>
-                </svg>
-            </a>
-        </div>
-        <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-6 2xl:grid-cols-8 gap-8 mt-8">
-            <a href="#" class="flex flex-col items-center justify-center text-gray-800 hover:text-blue-600" title="View Profile">
-                <img src="https://vojislavd.com/ta-template-demo/assets/img/connections/connection1.jpg" class="w-16 rounded-full">
-                <p class="text-center font-bold text-sm mt-1">Diane Aguilar</p>
-                <p class="text-xs text-gray-500 text-center">UI/UX Design at Upwork</p>
-            </a>
-            <a href="#" class="flex flex-col items-center justify-center text-gray-800 hover:text-blue-600" title="View Profile">
-                <img src="https://vojislavd.com/ta-template-demo/assets/img/connections/connection2.jpg" class="w-16 rounded-full">
-                <p class="text-center font-bold text-sm mt-1">Frances Mather</p>
-                <p class="text-xs text-gray-500 text-center">Software Engineer at Facebook</p>
-            </a>
-            <a href="#" class="flex flex-col items-center justify-center text-gray-800 hover:text-blue-600" title="View Profile">
-                <img src="https://vojislavd.com/ta-template-demo/assets/img/connections/connection3.jpg" class="w-16 rounded-full">
-                <p class="text-center font-bold text-sm mt-1">Carlos Friedrich</p>
-                <p class="text-xs text-gray-500 text-center">Front-End Developer at Tailwind CSS</p>
-            </a>
-            <a href="#" class="flex flex-col items-center justify-center text-gray-800 hover:text-blue-600" title="View Profile">
-                <img src="https://vojislavd.com/ta-template-demo/assets/img/connections/connection4.jpg" class="w-16 rounded-full">
-                <p class="text-center font-bold text-sm mt-1">Donna Serrano</p>
-                <p class="text-xs text-gray-500 text-center">System Engineer at Tesla</p>
-            </a>
-            <a href="#" class="flex flex-col items-center justify-center text-gray-800 hover:text-blue-600" title="View Profile">
-                <img src="https://vojislavd.com/ta-template-demo/assets/img/connections/connection5.jpg" class="w-16 rounded-full">
-                <p class="text-center font-bold text-sm mt-1">Randall Tabron</p>
-                <p class="text-xs text-gray-500 text-center">Software Developer at Upwork</p>
-            </a>
-            <a href="#" class="flex flex-col items-center justify-center text-gray-800 hover:text-blue-600" title="View Profile">
-                <img src="https://vojislavd.com/ta-template-demo/assets/img/connections/connection6.jpg" class="w-16 rounded-full">
-                <p class="text-center font-bold text-sm mt-1">John McCleary</p>
-                <p class="text-xs text-gray-500 text-center">Software Engineer at Laravel</p>
-            </a>
-            <a href="#" class="flex flex-col items-center justify-center text-gray-800 hover:text-blue-600" title="View Profile">
-                <img src="https://vojislavd.com/ta-template-demo/assets/img/connections/connection7.jpg" class="w-16 rounded-full">
-                <p class="text-center font-bold text-sm mt-1">Amanda Noble</p>
-                <p class="text-xs text-gray-500 text-center">Graphic Designer at Tailwind CSS</p>
-            </a>
-            <a href="#" class="flex flex-col items-center justify-center text-gray-800 hover:text-blue-600" title="View Profile">
-                <img src="https://vojislavd.com/ta-template-demo/assets/img/connections/connection8.jpg" class="w-16 rounded-full">
-                <p class="text-center font-bold text-sm mt-1">Christine Drew</p>
-                <p class="text-xs text-gray-500 text-center">Senior Android Developer at Google</p>
-            </a>
-            <a href="#" class="flex flex-col items-center justify-center text-gray-800 hover:text-blue-600" title="View Profile">
-                <img src="https://vojislavd.com/ta-template-demo/assets/img/connections/connection9.jpg" class="w-16 rounded-full">
-                <p class="text-center font-bold text-sm mt-1">Lucas Bell</p>
-                <p class="text-xs text-gray-500 text-center">Creative Writer at Upwork</p>
-            </a>
-            <a href="#" class="flex flex-col items-center justify-center text-gray-800 hover:text-blue-600" title="View Profile">
-                <img src="https://vojislavd.com/ta-template-demo/assets/img/connections/connection10.jpg" class="w-16 rounded-full">
-                <p class="text-center font-bold text-sm mt-1">Debra Herring</p>
-                <p class="text-xs text-gray-500 text-center">Co-Founder at Alpine.js</p>
-            </a>
-            <a href="#" class="flex flex-col items-center justify-center text-gray-800 hover:text-blue-600" title="View Profile">
-                <img src="https://vojislavd.com/ta-template-demo/assets/img/connections/connection11.jpg" class="w-16 rounded-full">
-                <p class="text-center font-bold text-sm mt-1">Benjamin Farrior</p>
-                <p class="text-xs text-gray-500 text-center">Software Engineer Lead at Microsoft</p>
-            </a>
-            <a href="#" class="flex flex-col items-center justify-center text-gray-800 hover:text-blue-600" title="View Profile">
-                <img src="https://vojislavd.com/ta-template-demo/assets/img/connections/connection12.jpg" class="w-16 rounded-full">
-                <p class="text-center font-bold text-sm mt-1">Maria Heal</p>
-                <p class="text-xs text-gray-500 text-center">Linux System Administrator at Twitter</p>
-            </a>
-            <a href="#" class="flex flex-col items-center justify-center text-gray-800 hover:text-blue-600" title="View Profile">
-                <img src="https://vojislavd.com/ta-template-demo/assets/img/connections/connection13.jpg" class="w-16 rounded-full">
-                <p class="text-center font-bold text-sm mt-1">Edward Ice</p>
-                <p class="text-xs text-gray-500 text-center">Customer Support at Instagram</p>
-            </a>
-            <a href="#" class="flex flex-col items-center justify-center text-gray-800 hover:text-blue-600" title="View Profile">
-                <img src="https://vojislavd.com/ta-template-demo/assets/img/connections/connection14.jpg" class="w-16 rounded-full">
-                <p class="text-center font-bold text-sm mt-1">Jeffery Silver</p>
-                <p class="text-xs text-gray-500 text-center">Software Engineer at Twitter</p>
-            </a>
-            <a href="#" class="flex flex-col items-center justify-center text-gray-800 hover:text-blue-600" title="View Profile">
-                <img src="https://vojislavd.com/ta-template-demo/assets/img/connections/connection15.jpg" class="w-16 rounded-full">
-                <p class="text-center font-bold text-sm mt-1">Jennifer Schultz</p>
-                <p class="text-xs text-gray-500 text-center">Project Manager at Google</p>
-            </a>
-            <a href="#" class="flex flex-col items-center justify-center text-gray-800 hover:text-blue-600" title="View Profile">
-                <img src="https://vojislavd.com/ta-template-demo/assets/img/connections/connection16.jpg" class="w-16 rounded-full">
-                <p class="text-center font-bold text-sm mt-1">Joseph Marlatt</p>
-                <p class="text-xs text-gray-500 text-center">Team Lead at Facebook</p>
-            </a>
-        </div>
-    </div>
 </div>
-
-<article class="grid grid-cols-1 md:grid-cols-2 md:col-span-5 xl:grid-cols-4 xl:col-span-4 col-span-5 gap-3 mt-3 content-center w-full">
-  <% @offers.each do |offer| %>
-    <div class="p-6 w-full md:hover:bg-yellow-100 xl:hover:scale-110 md:hover:shadow-sm rounded-xl transition duration-600 flex flex-col content-center">
-      <%= offerable_link(offer) %>
-    </div>
-  <% end %>
-</article>
 
 
 <script>
