--- a/app/views/shared/_offer.html.erb
+++ b/app/views/shared/_offer.html.erb
@@ -1,15 +1,16 @@
 <div class="relative">
   <%= cl_image_tag offer.offerable.photos.first.key, class: "object-cover w-full xl:w-96 h-96 md:h-80 lg:h-60 rounded-lg" %>
-  <%= button_tag(type: "submit", class: "flex justify-end p-2.5 bg-green-500 rounded-xl absolute top-12 right-0 hover:rounded-3xl hover:bg-green-600 transition-all duration-300 text-white opacity-90", id: "edit-about-button") do %>
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-      <path stroke-linecap="round" stroke-linejoin="round" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
-    </svg>
-  <% end %>
 
-  <%= button_tag(type: "submit", class: "flex justify-end p-2.5 bg-red-500 rounded-xl absolute top-0 right-0 hover:rounded-3xl hover:bg-red-600 transition-all duration-300 text-white opacity-90", id: "edit-about-button") do %>
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-      <path stroke-linecap="round" stroke-linejoin="round" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
-    </svg>
+  <% if current_user == offer.offerable.user %>
+    <%= link_to offer_path(offer), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this post?" }, class: "flex justify-end p-2.5 bg-red-500 rounded-xl absolute top-12 right-0 hover:rounded-3xl hover:bg-red-600 transition-all duration-300 text-white opacity-90 hidden", id: "delete-offer-button" do %>
+      <svg style="color: white" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16"> <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" fill="white"></path> <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" fill="white"></path> </svg>
+    <% end %>
+
+    <%= button_tag(type: "submit", class: "flex justify-end p-2.5 bg-green-500 rounded-xl absolute top-0 right-0 hover:rounded-3xl hover:bg-green-600 transition-all duration-300 text-white opacity-90 hidden", id: "edit-offer-button") do %>
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
+      </svg>
+    <% end %>
   <% end %>
 </div>
 
